osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_call_rvalue/test_not_has_result_and_result_used_as_function_argument.txt
error: you cannot store the result of this function call because it has no return value
--> main.sml:1:6
     |
   1 | Qux = HasNoResult()
     |       ^ this cannot appear to the right of a `=`, e.g.:
             | - `HasNoResult(...)` is OK
             | - `Qux = HasNoResult(...)` is not OK